--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,20 @@
 	<title>Pagina</title>
 </head>
 <body>
-
+<header>
+	<nav>
+		<ul>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</nav>
+</header>
+<article>
+	<section>
+		
+	</section>
+</article>
 </body>
 </html>
