--- a/Index.html
+++ b/Index.html
@@ -10,10 +10,10 @@
 <header>
 	<nav>
 		<ul>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li>Inicio</li>
+			<li>2</li>
+			<li>3</li>
+			<li>4</li>
 		</ul>
 	</nav>
 </header>
