--- a/Index.html
+++ b/Index.html
@@ -4,14 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Pagina</title>
+	<title>Pagina XD</title>
 </head>
 <body>
 <header>
 	<nav>
 		<ul>
 			<li>Inicio</li>
-			<li>2</li>
+			<li>Perfil</li>
 			<li>3</li>
 			<li>4</li>
 		</ul>
@@ -19,7 +19,14 @@
 </header>
 <article>
 	<section>
-		
+		<h1>Hola mundo</h1>
+		<h2>xdxdxdxd</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</section>
 </article>
 </body>
